# gmh

./: LICENSE  README.md  build.gradle  g  gmh.cabal  pom.xml  shard.yml  stack.yaml
app/: Database.hs  Flags.hs  GlobalOptions.hs  Main.hs  UI.hs
app/cmd/: InitCommand.hs  LoginCommand.hs  SyncCommand.hs
spec/: flags_spec.cr  gmh_spec.cr  imapresponse_spec.cr  rfc2822_spec.cr  spec_helper.cr
src/: gmh.cr
src/gmh/: cmd_cat.cr  cmd_init.cr  cmd_list.cr  cmd_login.cr  cmd_select.cr  cmd_show.cr  cmd_sync.cr  curses.cr  database.cr  flags.cr  globals.cr  html_to_text.cr  imap.cr  imap_responses.cr  imap_scanner.cr  progress.cr  rfc2822.cr  select.cr  version.cr
src/main/kotlin/com/cowlark/gmh/: Database.kt  Main.kt  Progressbar.kt  batch.kt
src/main/kotlin/com/cowlark/gmh/cmd/: Labels.kt  Scan.kt  Select.kt  Sync.kt  Threads.kt
src/main/kotlin/com/cowlark/gmh/lib/: Database.kt  Progressbar.kt  batch.kt  flags.kt  logging.kt
test/: FlagsTests.hs  Spec.hs
