name:                gmh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gmh#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gmh-exe
  hs-source-dirs:
    app,
    lib,
    app/cmd
  main-is:
    Main.hs
  ghc-options:
    -threaded
    -O2
  build-depends:
    base,
    direct-sqlite,
    unix,
    raw-strings-qq,
    text,
    containers,
    imap,
    connection,
    list-t
  default-language:
    Haskell2010
  other-modules:
    Flags,
    GlobalOptions,
    Database,
    LoginCommand,
    InitCommand,
    SyncCommand,
    UI
  default-extensions:
    OverloadedStrings,
    NamedFieldPuns,
    QuasiQuotes,
    ScopedTypeVariables

test-suite gmh-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test,
    lib
  main-is:
    Spec.hs
  build-depends:
    base,
    tasty,
    tasty-hunit,
    containers,
    text
  other-modules:
    Flags,
    FlagsTests
  ghc-options:
    -threaded
    -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings,
    NamedFieldPuns,
    QuasiQuotes,
    ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/githubuser/gmh
